cmss/main/default/objects/UserTrainingLevel__c/UserTrainingLevel__c.object-meta.xml
<CustomObject>
    <description>Serves for storage of user&apos;s completed trainings and other educational matters.</description>
    <label>User Training Level</label>
    <nameField>
        <displayFormat>UTL-{YYYY}-{0000}</displayFormat>
        <label>User Training Level Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Training Levels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>