cmss/main/default/objects/UserTrainingLevel__c/fields/TrainingLevelType__c.field-meta.xml
<CustomField>
    <fullName>TrainingLevelType__c</fullName>
    <label>Training Level Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>199</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>415</fullName>
            </value>
            <value>
                <fullName>426</fullName>
            </value>
            <value>
                <fullName>434</fullName>
            </value>
            <value>
                <fullName>440</fullName>
            </value>
            <value>
                <fullName>444</fullName>
            </value>
            <value>
                <fullName>445</fullName>
            </value>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>451</fullName>
            </value>
            <value>
                <fullName>452</fullName>
            </value>
            <value>
                <fullName>453</fullName>
            </value>
            <value>
                <fullName>455</fullName>
            </value>
            <value>
                <fullName>459</fullName>
            </value>
            <value>
                <fullName>460</fullName>
            </value>
            <value>
                <fullName>461</fullName>
            </value>
            <value>
                <fullName>462</fullName>
            </value>
            <value>
                <fullName>463</fullName>
            </value>
            <value>
                <fullName>464</fullName>
            </value>
            <value>
                <fullName>465</fullName>
            </value>
            <value>
                <fullName>466</fullName>
            </value>
            <value>
                <fullName>467</fullName>
            </value>
            <value>
                <fullName>468</fullName>
            </value>
            <value>
                <fullName>469</fullName>
            </value>
            <value>
                <fullName>470</fullName>
            </value>
            <value>
                <fullName>471</fullName>
            </value>
            <value>
                <fullName>472</fullName>
            </value>
            <value>
                <fullName>473</fullName>
            </value>
            <value>
                <fullName>474</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>