cmss/main/default/objects/UserTrainingLevel__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>