cmss/main/default/objects/UserTrainingLevel__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>