cmss/main/default/objects/UserTrainingLevel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>Všechny</label>
</ListView>